Fix chevrons being hidden by bottom bar in mobile iOS
Unfortunately for a variety of sensical reasons mobile iOS UI at the bottom layers _on top_ of the website, which means part of the viewport is hidden, in this case the chevrons.

--- a/source/index/stylesheets/index.css
+++ b/source/index/stylesheets/index.css
@@ -141,6 +141,12 @@ header h1 {
   text-align: center;
 }
 
+@supports (-webkit-overflow-scrolling: touch) {
+  header h1 {
+    top: 18%;
+  }
+}
+
 @media (--medium-viewport) {
   header h1 {
     font-size: 2.5rem
@@ -158,6 +164,12 @@ header .chevrons {
   left: 50%;
   transform: translateX(-50%);
   bottom: 6%;
+}
+
+@supports (-webkit-overflow-scrolling: touch) {
+  header .chevrons {
+    bottom: 18%;
+  }
 }
 
 header .chevrons {
